fixing layout issues

--- a/css/screen.css
+++ b/css/screen.css
@@ -234,7 +234,7 @@ input[type=submit] {
 }
 
 /* Mobile first queries */
-@media (max-width: 480px) {
+@media screen and (max-width: 480px) {
   form {
     margin: 0 0 1em 0; /* 5px */
     width: 100%;
@@ -256,7 +256,7 @@ input[type=submit] {
     width: 95%; 
   }
 }
-@media (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
   form > label,
 	legend {
   	text-align: right;
